[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-monitor"
version = "2.0.0"
description = "Autonomous geopolitical intelligence collection and analysis platform"
requires-python = ">=3.10"
dependencies = [
    # Core
    "feedparser>=6.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # NLP
    "spacy>=3.7",
    "rapidfuzz>=3.0",
    # Embeddings & Clustering
    "sentence-transformers>=2.2",
    "hdbscan>=0.8",
    "numpy>=1.24",
    # LLM Providers
    "openai>=1.0",
    # Analysis
    "scipy>=1.11",
    "networkx>=3.0",
    # API & Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    # Alerting
    "apscheduler>=3.10",
    # Scraping
    "lxml>=5.0",
]

[project.optional-dependencies]
telegram = ["telethon>=1.34"]
twitter = ["tweepy>=4.14"]
anthropic = ["anthropic>=0.25"]
desktop = ["plyer>=2.1"]
postgres = ["psycopg2-binary>=2.9", "pgvector>=0.2"]
celery = ["celery[redis]>=5.3"]
all = [
    "telethon>=1.34",
    "tweepy>=4.14",
    "anthropic>=0.25",
    "plyer>=2.1",
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "celery[redis]>=5.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
osint-monitor = "osint_monitor.cli:main"

[tool.setuptools.packages.find]
include = ["osint_monitor*"]
